--- a/ch06_pytorch_base/6_tensor_shape.ipynb
+++ b/ch06_pytorch_base/6_tensor_shape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a519ed74f90d087a",
    "metadata": {
     "ExecuteTime": {
@@ -31,13 +31,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[5, 2, 0, 6, 9],\n",
-      "         [4, 1, 3, 4, 4],\n",
-      "         [2, 0, 0, 2, 1]],\n",
+      "tensor([[[0, 9, 3, 2, 2],\n",
+      "         [8, 0, 3, 5, 9],\n",
+      "         [4, 7, 0, 4, 9]],\n",
       "\n",
-      "        [[2, 9, 1, 4, 5],\n",
-      "         [2, 1, 7, 3, 1],\n",
-      "         [0, 6, 0, 9, 5]]])\n"
+      "        [[7, 9, 2, 8, 6],\n",
+      "         [2, 3, 3, 9, 9],\n",
+      "         [1, 9, 1, 7, 9]]])\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "341c9109fe1abeea",
    "metadata": {
     "ExecuteTime": {
@@ -69,14 +69,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[5, 2, 0, 6, 9],\n",
-      "         [2, 9, 1, 4, 5]],\n",
+      "tensor([[[0, 9, 3, 2, 2],\n",
+      "         [7, 9, 2, 8, 6]],\n",
       "\n",
-      "        [[4, 1, 3, 4, 4],\n",
-      "         [2, 1, 7, 3, 1]],\n",
+      "        [[8, 0, 3, 5, 9],\n",
+      "         [2, 3, 3, 9, 9]],\n",
       "\n",
-      "        [[2, 0, 0, 2, 1],\n",
-      "         [0, 6, 0, 9, 5]]])\n"
+      "        [[4, 7, 0, 4, 9],\n",
+      "         [1, 9, 1, 7, 9]]])\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6edb036899d8bd88",
    "metadata": {
     "ExecuteTime": {
@@ -100,30 +100,401 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[5, 2],\n",
-      "         [4, 2],\n",
-      "         [2, 0]],\n",
+      "tensor([[[0, 7],\n",
+      "         [8, 2],\n",
+      "         [4, 1]],\n",
       "\n",
-      "        [[2, 9],\n",
-      "         [1, 1],\n",
-      "         [0, 6]],\n",
+      "        [[9, 9],\n",
+      "         [0, 3],\n",
+      "         [7, 9]],\n",
       "\n",
-      "        [[0, 1],\n",
-      "         [3, 7],\n",
-      "         [0, 0]],\n",
+      "        [[3, 2],\n",
+      "         [3, 3],\n",
+      "         [0, 1]],\n",
       "\n",
-      "        [[6, 4],\n",
-      "         [4, 3],\n",
-      "         [2, 9]],\n",
+      "        [[2, 8],\n",
+      "         [5, 9],\n",
+      "         [4, 7]],\n",
       "\n",
-      "        [[9, 5],\n",
-      "         [4, 1],\n",
-      "         [1, 5]]])\n"
+      "        [[2, 6],\n",
+      "         [9, 9],\n",
+      "         [9, 9]]])\n"
      ]
     }
    ],
    "source": [
     "print(tensor1.transpose(0, 2))  #交换维度理解似乎不够"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3b6a3fdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0, 9, 3, 2, 2],\n",
+      "         [8, 0, 3, 5, 9],\n",
+      "         [4, 7, 0, 4, 9]],\n",
+      "\n",
+      "        [[7, 9, 2, 8, 6],\n",
+      "         [2, 3, 3, 9, 9],\n",
+      "         [1, 9, 1, 7, 9]]])\n",
+      "tensor([[[0, 8, 4],\n",
+      "         [9, 0, 7],\n",
+      "         [3, 3, 0],\n",
+      "         [2, 5, 4],\n",
+      "         [2, 9, 9]],\n",
+      "\n",
+      "        [[7, 2, 1],\n",
+      "         [9, 3, 9],\n",
+      "         [2, 3, 1],\n",
+      "         [8, 9, 7],\n",
+      "         [6, 9, 9]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 重新排列多个维度\n",
+    "print(tensor1)\n",
+    "print(tensor1.permute(0, 2, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14be9a1e",
+   "metadata": {},
+   "source": [
+    "6.8.2 调整形状 reshape 和 view "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8146ed61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor1 = torch.randint(1, 10, (3, 5, 4))\n",
+    "print(tensor1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "02f0ba59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 8, 1, 3, 7, 6, 4, 3, 2, 2, 7, 3, 7, 8, 9, 8, 5, 9, 7, 4],\n",
+      "        [3, 9, 1, 7, 4, 1, 8, 1, 8, 9, 2, 4, 5, 1, 2, 4, 1, 7, 9, 3],\n",
+      "        [8, 5, 2, 1, 9, 7, 7, 5, 5, 1, 8, 6, 9, 6, 8, 7, 4, 7, 6, 7]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor1.reshape(3, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f778de7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 8, 1, 3, 7, 6, 4, 3, 2, 2, 7, 3, 7, 8, 9, 8, 5, 9, 7, 4, 3, 9, 1, 7,\n",
+      "        4, 1, 8, 1, 8, 9, 2, 4, 5, 1, 2, 4, 1, 7, 9, 3, 8, 5, 2, 1, 9, 7, 7, 5,\n",
+      "        5, 1, 8, 6, 9, 6, 8, 7, 4, 7, 6, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor1.reshape(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764dddc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#view\n",
+    "print(tensor1.is_contiguous()) #这玩意"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8c2ea7df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 8, 1, 3, 7, 6, 4, 3, 2, 2],\n",
+      "        [7, 3, 7, 8, 9, 8, 5, 9, 7, 4],\n",
+      "        [3, 9, 1, 7, 4, 1, 8, 1, 8, 9],\n",
+      "        [2, 4, 5, 1, 2, 4, 1, 7, 9, 3],\n",
+      "        [8, 5, 2, 1, 9, 7, 7, 5, 5, 1],\n",
+      "        [8, 6, 9, 6, 8, 7, 4, 7, 6, 7]])\n",
+      "torch.Size([3, 5, 4])\n",
+      "tensor([[[1, 8, 1, 3],\n",
+      "         [7, 6, 4, 3],\n",
+      "         [2, 2, 7, 3],\n",
+      "         [7, 8, 9, 8],\n",
+      "         [5, 9, 7, 4]],\n",
+      "\n",
+      "        [[3, 9, 1, 7],\n",
+      "         [4, 1, 8, 1],\n",
+      "         [8, 9, 2, 4],\n",
+      "         [5, 1, 2, 4],\n",
+      "         [1, 7, 9, 3]],\n",
+      "\n",
+      "        [[8, 5, 2, 1],\n",
+      "         [9, 7, 7, 5],\n",
+      "         [5, 1, 8, 6],\n",
+      "         [9, 6, 8, 7],\n",
+      "         [4, 7, 6, 7]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor1.view(-1, 10))\n",
+    "print(tensor1.shape)\n",
+    "print(tensor1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1394b1e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[1, 3, 8],\n",
+      "         [7, 4, 9],\n",
+      "         [2, 8, 5],\n",
+      "         [7, 5, 9],\n",
+      "         [5, 1, 4]],\n",
+      "\n",
+      "        [[8, 9, 5],\n",
+      "         [6, 1, 7],\n",
+      "         [2, 9, 1],\n",
+      "         [8, 1, 6],\n",
+      "         [9, 7, 7]],\n",
+      "\n",
+      "        [[1, 1, 2],\n",
+      "         [4, 8, 7],\n",
+      "         [7, 2, 8],\n",
+      "         [9, 2, 8],\n",
+      "         [7, 9, 6]],\n",
+      "\n",
+      "        [[3, 7, 1],\n",
+      "         [3, 1, 5],\n",
+      "         [3, 4, 6],\n",
+      "         [8, 4, 7],\n",
+      "         [4, 3, 7]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor1 = tensor1.permute(2, 1, 0)\n",
+    "print(tensor1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "17f3427f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor1.is_contiguous())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7e53920e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 3, 8, 7, 4, 9, 2, 8, 5, 7, 5, 9, 5, 1, 4, 8, 9, 5, 6, 1, 7, 2, 9, 1,\n",
+      "        8, 1, 6, 9, 7, 7, 1, 1, 2, 4, 8, 7, 7, 2, 8, 9, 2, 8, 7, 9, 6, 3, 7, 1,\n",
+      "        3, 1, 5, 3, 4, 6, 8, 4, 7, 4, 3, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor1.contiguous().view(-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d9bbd48",
+   "metadata": {},
+   "source": [
+    "6.8.3 增加或者删除维度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5f83792e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor1 = torch.tensor([1, 2, 3])\n",
+    "print(tensor1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56f0905c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 3]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#在0维上增加一个矩阵\n",
+    "print(tensor1.unsqueeze(dim=0))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cddffb83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1],\n",
+      "        [2],\n",
+      "        [3]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor1.unsqueeze(dim=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3bcfe0ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3, 3, 1, 6],\n",
+      "        [5, 2, 4, 9],\n",
+      "        [2, 1, 4, 2]])\n",
+      "tensor([[[3],\n",
+      "         [3],\n",
+      "         [1],\n",
+      "         [6]],\n",
+      "\n",
+      "        [[5],\n",
+      "         [2],\n",
+      "         [4],\n",
+      "         [9]],\n",
+      "\n",
+      "        [[2],\n",
+      "         [1],\n",
+      "         [4],\n",
+      "         [2]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor1 = torch.randint(1, 10, (3, 4))\n",
+    "print(tensor1)\n",
+    "print(tensor1.unsqueeze(dim = 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a88b4e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3, 3, 1, 6],\n",
+      "        [5, 2, 4, 9],\n",
+      "        [2, 1, 4, 2]])\n",
+      "tensor([[3, 3, 1, 6],\n",
+      "        [5, 2, 4, 9],\n",
+      "        [2, 1, 4, 2]])\n",
+      "tensor([[[8, 4, 8],\n",
+      "         [1, 2, 1]]])\n",
+      "tensor([[8, 4, 8],\n",
+      "        [1, 2, 1]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#减少维度\n",
+    "print(tensor1)\n",
+    "print(tensor1.squeeze(dim = 0))\n",
+    "tensor2 = torch.randint(1, 10, (1, 2, 3))\n",
+    "print(tensor2) #只有指定维度为1维的时候，才可以缩减维度\n",
+    "print(tensor2.squeeze(dim = 0))   "
    ]
   }
  ],
