--- a/ch06_pytorch_base/6_tensor_shape.ipynb
+++ b/ch06_pytorch_base/6_tensor_shape.ipynb
@@ -496,6 +496,152 @@
     "print(tensor2) #只有指定维度为1维的时候，才可以缩减维度\n",
     "print(tensor2.squeeze(dim = 0))   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5313940",
+   "metadata": {},
+   "source": [
+    "6.9 张量拼接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88e63000",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[5, 6, 7, 8],\n",
+      "         [5, 5, 6, 7],\n",
+      "         [7, 9, 8, 4]],\n",
+      "\n",
+      "        [[9, 6, 8, 6],\n",
+      "         [9, 4, 5, 2],\n",
+      "         [9, 4, 9, 9]]])\n",
+      "tensor([[[6, 3, 2, 2],\n",
+      "         [1, 9, 6, 1],\n",
+      "         [2, 7, 1, 3]],\n",
+      "\n",
+      "        [[9, 9, 6, 8],\n",
+      "         [4, 1, 3, 6],\n",
+      "         [2, 6, 4, 4]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#拼接 是对应x维度的大小变大了\n",
+    "tensor1 = torch.randint(1, 10, (2, 3, 4))\n",
+    "tensor2 = torch.randint(1, 10, (2, 3, 4))\n",
+    "print(tensor1)\n",
+    "print(tensor2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "50d0294e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[5, 6, 7, 8],\n",
+      "         [5, 5, 6, 7],\n",
+      "         [7, 9, 8, 4]],\n",
+      "\n",
+      "        [[9, 6, 8, 6],\n",
+      "         [9, 4, 5, 2],\n",
+      "         [9, 4, 9, 9]],\n",
+      "\n",
+      "        [[6, 3, 2, 2],\n",
+      "         [1, 9, 6, 1],\n",
+      "         [2, 7, 1, 3]],\n",
+      "\n",
+      "        [[9, 9, 6, 8],\n",
+      "         [4, 1, 3, 6],\n",
+      "         [2, 6, 4, 4]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cat((tensor1, tensor2), dim = 0)) #只改变拼接的维数  比如是dim=2，则最后dim1 + dim2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa05841e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[9, 1, 8, 3],\n",
+      "         [7, 7, 4, 6],\n",
+      "         [8, 6, 8, 3]],\n",
+      "\n",
+      "        [[1, 9, 9, 9],\n",
+      "         [6, 1, 4, 4],\n",
+      "         [7, 1, 5, 7]]])\n",
+      "tensor([[[9, 2, 7, 9],\n",
+      "         [7, 8, 9, 3],\n",
+      "         [1, 4, 3, 2]],\n",
+      "\n",
+      "        [[9, 7, 4, 1],\n",
+      "         [8, 5, 4, 7],\n",
+      "         [1, 3, 3, 9]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#堆叠  是增加了一个总体维度，空间增加\n",
+    "tensor1 = torch.randint(1, 10, (2, 3, 4))\n",
+    "tensor2 = torch.randint(1, 10, (2, 3, 4))\n",
+    "print(tensor1)\n",
+    "print(tensor2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1aaa520c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[9, 1, 8, 3],\n",
+      "          [7, 7, 4, 6],\n",
+      "          [8, 6, 8, 3]],\n",
+      "\n",
+      "         [[1, 9, 9, 9],\n",
+      "          [6, 1, 4, 4],\n",
+      "          [7, 1, 5, 7]]],\n",
+      "\n",
+      "\n",
+      "        [[[9, 2, 7, 9],\n",
+      "          [7, 8, 9, 3],\n",
+      "          [1, 4, 3, 2]],\n",
+      "\n",
+      "         [[9, 7, 4, 1],\n",
+      "          [8, 5, 4, 7],\n",
+      "          [1, 3, 3, 9]]]])\n",
+      "torch.Size([2, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor3 = torch.stack([tensor1, tensor2], dim = 0)\n",
+    "print(tensor3)\n",
+    "print(tensor3.shape)"
+   ]
   }
  ],
  "metadata": {
