--- a/ch06_pytorch_base/8_tensor_detach.ipynb
+++ b/ch06_pytorch_base/8_tensor_detach.ipynb
@@ -145,6 +145,144 @@
    "source": [
     "z1.sum().backward()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e285ff9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# z2.sum().backward()  #报错，因为y不需要梯度追踪，其计算图已经被切断"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "95506863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]], requires_grad=True)\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]], grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.ones(2, 2, requires_grad=True)\n",
+    "y = x * x\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2531775c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U: tensor([[1., 1.],\n",
+      "        [1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#分离y\n",
+    "u = y.detach()\n",
+    "print(\"U:\", u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1a320718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z: tensor([[1., 1.],\n",
+      "        [1., 1.]], grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#让u参与张量的计算\n",
+    "z = u * x\n",
+    "print(\"Z:\", z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d9507bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n",
+      "tensor(4.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#反向传播，计算梯度\n",
+    "z.sum().backward()  #这里只是汇总标量，并没有损失维度\n",
+    "h = torch.ones_like(x) \n",
+    "print(h)\n",
+    "print(h.sum()) #这是一个标量\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c4dbc69b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "040c26ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[True, True],\n",
+      "        [True, True]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.grad == u) #将u参数当成常数来计算了"
+   ]
   }
  ],
  "metadata": {
