--- a/ch07_pytorch_dl/1_init.ipynb
+++ b/ch07_pytorch_dl/1_init.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "24900f87",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3de7f034",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2c547477",
    "metadata": {},
    "outputs": [
@@ -99,8 +99,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 7.0437, -1.0538,  7.9045, -5.4134, 14.8561],\n",
-      "        [-2.4540, -3.2650,  1.6242, 15.1840,  4.7850]], requires_grad=True)\n"
+      "tensor([[-14.3220,   6.4808,   3.2108,   2.6559,  18.3760],\n",
+      "        [  0.4362,  -5.6584,   4.5582,  16.8491,   5.5521]],\n",
+      "       requires_grad=True)\n"
      ]
     }
    ],
@@ -108,6 +109,69 @@
     "# 3.正态分布初始化 \n",
     "nn.init.normal_(linear.weight, mean=0, std=10)  #均值和方差\n",
     "print(linear.weight)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e742a344",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[0.0242, 0.8790, 0.3802, 0.3885, 0.2420],\n",
+      "        [0.8701, 0.8560, 0.9994, 0.5317, 0.5099]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4.均匀分布初始化\n",
+    "nn.init.uniform_(linear.weight, a=0, b=1)  #区间\n",
+    "print(linear.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5e3ab269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[ 0.1521, -0.4707, -0.3422, -0.2817, -0.0979],\n",
+      "        [-0.1694,  0.3694, -0.0532, -0.9993, -0.1384]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Xavier初始化\n",
+    "nn.init.xavier_normal_(linear.weight)\n",
+    "print(linear.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "529163fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.randn(3, 5, device=torch.device('cuda'))\n",
+    "print(input.device)  "
    ]
   }
  ],
